--- a/src/phantom.Console.Tools.csproj
+++ b/src/phantom.Console.Tools.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Google.Apis.Auth" Version="1.69.0" />
+    <PackageReference Include="Google.Apis.Sheets.v4" Version="1.69.0.3757" />
+  </ItemGroup>
+
 </Project>
